2009-01-23  Peter Bloomfield

	* src/main-window.c: use unique names in GtkActionGroup.
	* src/sendmsg-window.c: (sendmsg_window_ui_manager_new): ditto.

2009-01-23  Peter Bloomfield

	* src/main-window.c: Gtk-2.16 deprecation cleanup.

2009-01-21  Peter Bloomfield

	* libbalsa/body.c: (libbalsa_message_body_get_part_stream,
	libbalsa_message_body_get_message_part_stream): new helpers;
	(libbalsa_message_body_get_stream): use them;
	(libbalsa_message_body_get_content,
	libbalsa_message_body_save_stream): set GError when returning
	error.
	* libbalsa/files.c: (libbalsa_default_attachment_pixbuf,
	libbalsa_icon_finder): remove unused GError.
	* src/balsa-mime-widget-callbacks.c:
	(balsa_mime_widget_ctx_menu_save): clear GError.

2009-01-20  Peter Bloomfield

	* libbalsa/body.c: (libbalsa_message_body_get_stream): check
	that we have a GMimePart;
	(libbalsa_message_body_save_stream): use
	libbalsa_message_body_stream_add_filter;
	* libbalsa/mailbox_imap.c: (libbalsa_mailbox_imap_get_msg_part):
	check for GMimeMultipart and GMimeMessagePart, as well as
	GMimePart.

2009-01-20  Peter Bloomfield

	* libbalsa/gmime-stream-gio.c: (stream_read, stream_write,
	stream_seek, stream_substream,
	g_mime_stream_gio_new_with_bounds): build on 32-bit box with
	GMime-2.2.
	* libbalsa/gmime-stream-gio.h: ditto.

2009-01-20  Peter Bloomfield

	Fix BUG - threading view and selecting, reported by Mario
	Mikocevic <mario.mikocevic t-com hr>
	(http://mail.gnome.org/archives/balsa-list/2009-January/msg00015.html)

	* src/balsa-index.h: new boolean BalsaIndex::collapsing.
	* src/balsa-index.c:
	(bndx_test_collapse_row_cb) new callback to set it;
	(bndx_tree_collapse_cb): clear it;
	(bndx_selection_changed): use it to manage preview;
	(bndx_instance_init) connect to "test-collapse-row" signal to
	set it;

2009-01-18  Paweł Sałek

	* NEWS, configure.in: release 2.3.28

2009-01-16  Peter Bloomfield

	* libbalsa/misc.c: (libbalsa_set_fallback_codeset): do not